--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,36 @@
 html {
-    transition: background-color 0.5s;
+    transition: background-color 2s;
 }
 
 body {
-    padding: 200px;
     margin: 0;
-    font-family: Arial;
+    font-family: 'Roboto', Arial, sans-serif;
     font-size: 30px;
+    font-weight: 300;
     text-align: center;
 }
 
-#title {
-    margin-bottom: 60px;
+#image {
+    margin-top: 40px;
+    display: none;
+    width: 200px;
+    height: 200px;
 }
 
-#results {
-    margin-top: 20px;
-    padding: 20px;
-    background-color: lightgray;
+#title {
+    margin: 40px;
 }
 
 .choice {
     margin-top: 40px;
     margin-bottom: 40px;
     cursor: pointer;
+    font-weight: 400;
+}
+
+#results {
+    margin-top: 20px;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
 }
