--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,7 @@ body {
 }
 
 .choice {
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin: 40px;
     cursor: pointer;
     font-weight: 400;
 }
@@ -32,5 +31,4 @@ body {
     margin-top: 20px;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.2);
-    margin-bottom: 20px;
 }
